# syncltx23serverless

./: .gitignore  README.md
.github/workflows/: build-runpod-sync-h200-image.yml  deploy-runpod-serverless-sync.yml
ltx23-standalone-service/: .env.example  README.md  pyproject.toml
ltx23-standalone-service/backend/app/: __init__.py  main.py  serverless.py
ltx23-standalone-service/deploy/runpod/: .env.runpod.example  .env.runpod.serverless.sync-h200.example  .env.runpod.sync-h200.example  README.md  SERVERLESS-H200-PREP.md  build_and_push_image.sh  create_headless_pod.sh  create_or_update_serverless_endpoint.sh
ltx23-standalone-service/deploy/vietnam/: .env.standard-a100.example
ltx23-standalone-service/infra/docker/: Dockerfile  Dockerfile.serverless  docker-compose.prod.yml
